Entität Lehrer hinzugefügt

--- a/src/main/resources/templates/schuehlerList.html
+++ b/src/main/resources/templates/schuehlerList.html
@@ -10,8 +10,8 @@
     <th>Name</th>
     </tr>
     <thead>
-    <tr th:each="user : ${userList}">
-    <td th:text=" ${user.id}"></td>
+    <tr th:each="schueler : ${schuelerList}">
+    <td th:text=" ${schueler.id}"></td>
     </table>
   </body>
 </html>
